hide worker html window before click print btn

--- a/src/worker.html
+++ b/src/worker.html
@@ -9,6 +9,7 @@
             ipcRenderer.send("readyToPrintPDF");
         });
     </script>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
